Bug 276276 - [svg] fix smart pointer warnings introduced in 280657@main
Summary: [svg] fix smart pointer warnings introduced in 280657@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
Depends on: 272416
Blocks:
  Show dependency treegraph
 
Reported: 2024-07-05 17:52 PDT by Antoine Quint
Modified: 2024-07-06 12:47 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2024-07-05 17:52:31 PDT
The fix for bug 272416, 280657@main, introduced some smart pointer warnings.
Comment 1 Radar WebKit Bug Importer 2024-07-05 17:53:08 PDT
<rdar://problem/131201565>
Comment 2 Antoine Quint 2024-07-05 17:54:09 PDT
Pull request: https://github.com/WebKit/WebKit/pull/30537
Comment 3 EWS 2024-07-06 12:47:11 PDT
Committed 280707@main (f0209d868259): <https://commits.webkit.org/280707@main>

Reviewed commits have been landed. Closing PR #30537 and removing active labels.