[svg] fix smart pointer warnings introduced in 280657@main https://bugs.webkit.org/show_bug.cgi?id=276276 rdar://131201565

Reviewed by Tim Nguyen.

* Source/WebCore/rendering/svg/RenderSVGPath.cpp:
(WebCore::RenderSVGPath::styleDidChange):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGPath.cpp:
(WebCore::LegacyRenderSVGPath::styleDidChange):

Canonical link: https://commits.webkit.org/280707@main