Source/WebCore/rendering/svg/RenderSVGPath.cpp
@@ -294,7 +294,7 @@ bool RenderSVGPath::isRenderingDisabled() const
 
 void RenderSVGPath::styleDidChange(StyleDifference diff, const RenderStyle* oldStyle)
 {
-    if (auto* pathElement = dynamicDowncast<SVGPathElement>(graphicsElement())) {
+    if (RefPtr pathElement = dynamicDowncast<SVGPathElement>(graphicsElement())) {
         if (!oldStyle || style().d() != oldStyle->d())
             pathElement->pathDidChange();
     }
